6th portfolio updated

--- a/portfolio-details_Drawnscape.html
+++ b/portfolio-details_Drawnscape.html
@@ -9,8 +9,8 @@
   <meta name="author" content="Tasif Hossain Emon">
 
   <!-- Favicons -->
-  <link href="assets/img/THE2.ico" rel="icon">
-  <link href="assets/img/THE2.ico" rel="apple-touch-icon">
+  <link href="assets/img/Ds_Logo_V1_resize.png" rel="icon">
+  <link href="assets/img/Ds_Logo_V1_resize.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -107,7 +107,7 @@
   </header>
   <!-- End Main Site Navbar -->
   <!-- ======= Enhanced Game-Style Hero Section ======= -->
-  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/Drawnscape_Front_IMG.jpg')" data-aos="fade-in">
+  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/Drawnscape/Drawnscape_Front_IMG.jpg')" data-aos="fade-in">
     <div class="particles-container"></div>
     <div class="overlay-game-design"></div>
     <div class="ui-frame top-left"></div>
@@ -214,7 +214,7 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic.webp" alt="Drawnscape Feature Graphic 1" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic.webp" alt="Drawnscape Feature Graphic 1" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -226,7 +226,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic2.webp" alt="Drawnscape Feature Graphic 2" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic2.webp" alt="Drawnscape Feature Graphic 2" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -238,7 +238,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic_3.webp" alt="Drawnscape Feature Graphic 3" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic_3.webp" alt="Drawnscape Feature Graphic 3" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -250,7 +250,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic_4.webp" alt="Drawnscape Feature Graphic 4" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic_4.webp" alt="Drawnscape Feature Graphic 4" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -262,7 +262,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic_5.webp" alt="Drawnscape Feature Graphic 5" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic_5.webp" alt="Drawnscape Feature Graphic 5" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -274,7 +274,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic_6.webp" alt="Drawnscape Feature Graphic 6" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic_6.webp" alt="Drawnscape Feature Graphic 6" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -286,7 +286,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/FeatureGraphic_7.webp" alt="Drawnscape Feature Graphic 7" loading="lazy">
+                        <img src="assets/img/Drawnscape/FeatureGraphic_7.webp" alt="Drawnscape Feature Graphic 7" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
