--- a/portfolio-details_PGW.html
+++ b/portfolio-details_PGW.html
@@ -96,7 +96,7 @@
   <!-- End Main Site Navbar -->
 
   <!-- ======= Enhanced Game-Style Hero Section ======= -->
-  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/PGW_SS1 (3).jpg')" data-aos="fade-in">
+  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/PGW/PGW_SS1\ \(3\).jpg')" data-aos="fade-in">
     <div class="particles-container"></div>
     <div class="overlay-game-design"></div>
     <div class="ui-frame top-left"></div>
@@ -202,7 +202,7 @@
                   <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="image-container">
-                    <img src="assets/img/PGW_SS1 (3).jpg" alt="Procedural World Screenshot 1" loading="lazy">
+                    <img src="assets/img/PGW/PGW_SS1 (3).jpg" alt="Procedural World Screenshot 1" loading="lazy">
                     <div class="image-overlay">
                       <div class="image-scanner"></div>
                       <div class="image-caption">
@@ -214,7 +214,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="image-container">
-                    <img src="assets/img/PGW_Infinite.webp" alt="Procedural World Screenshot 2" loading="lazy">
+                    <img src="assets/img/PGW/PGW_Infinite.webp" alt="Procedural World Screenshot 2" loading="lazy">
                     <div class="image-overlay">
                       <div class="image-scanner"></div>
                       <div class="image-caption">
@@ -226,7 +226,7 @@
                 </div>
                 <div class="swiper-slide">
                   <div class="image-container">
-                    <img src="assets/img/PGW_SS1 (2).jpg" alt="Procedural World Screenshot 3" loading="lazy">
+                    <img src="assets/img/PGW/PGW_SS1 (2).jpg" alt="Procedural World Screenshot 3" loading="lazy">
                     <div class="image-overlay">
                       <div class="image-scanner"></div>
                       <div class="image-caption">
@@ -235,16 +235,17 @@
                       </div>
                     </div>
                   </div>
-                </div>                  </div>
+                </div>
+              </div>
                   <div class="swiper-pagination game-pagination"></div>
                   <div class="swiper-button-next game-nav-btn"></div>
                   <div class="swiper-button-prev game-nav-btn"></div>
                 </div>
               </div>
             </div>
-
             <!-- Enhanced tech stack section -->
-            <div class="game-info-panel" data-aos="fade-up" data-aos-delay="100">              <div class="panel-header">
+            <div class="game-info-panel" data-aos="fade-up" data-aos-delay="100">
+              <div class="panel-header">
                 <div class="panel-icon">
                   <i class="bi bi-cpu"></i>
                 </div>
