--- a/portfolio-details_PGW_Forest.html
+++ b/portfolio-details_PGW_Forest.html
@@ -93,7 +93,7 @@
   </header>
   <!-- End Main Site Navbar -->
   <!-- ======= Enhanced Game-Style Hero Section ======= -->
-  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/PGW_2_FOREST(2)-min.webp')" data-aos="fade-in">
+  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/PGWF/PGW_2_FOREST\(2\)-min.webp')" data-aos="fade-in">
     <div class="particles-container"></div>
     <div class="overlay-game-design"></div>
     <div class="ui-frame top-left"></div>
@@ -199,7 +199,7 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/PGW_2_FOREST(2)-min.webp" alt="Procedural Forest Screenshot 1" loading="lazy">
+                        <img src="assets/img/PGWF/PGW_2_FOREST(2)-min.webp" alt="Procedural Forest Screenshot 1" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -211,7 +211,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/PGW_2_FOREST_(1)-min.webp" alt="Procedural Forest Screenshot 2" loading="lazy">
+                        <img src="assets/img/PGWF/PGW_2_FOREST_(1)-min.webp" alt="Procedural Forest Screenshot 2" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -223,7 +223,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/PGW_2_FOREST(3)-min.webp" alt="Procedural Forest Screenshot 3" loading="lazy">
+                        <img src="assets/img/PGWF/PGW_2_FOREST(3)-min.webp" alt="Procedural Forest Screenshot 3" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -235,7 +235,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/PGW_2_FOREST(4)-min.webp" alt="Procedural Forest Screenshot 4" loading="lazy">
+                        <img src="assets/img/PGWF/PGW_2_FOREST(4)-min.webp" alt="Procedural Forest Screenshot 4" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -247,7 +247,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/PGW_2_FOREST(5)-min.webp" alt="Procedural Forest Screenshot 5" loading="lazy">
+                        <img src="assets/img/PGWF/PGW_2_FOREST(5)-min.webp" alt="Procedural Forest Screenshot 5" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
