--- a/portfolio-details_RAWWAR.html
+++ b/portfolio-details_RAWWAR.html
@@ -13,8 +13,8 @@
   <meta name="author" content="Tasif Hossain Emon">
 
   <!-- Favicons -->
-  <link href="assets/img/THE2.ico" rel="icon">
-  <link href="assets/img/THE2.ico" rel="apple-touch-icon">
+  <link href="assets/img/RAWWAR.png" rel="icon">
+  <link href="assets/img/RAWWAR.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,7 +96,7 @@
   </header>
   <!-- End Main Site Navbar -->
   <!-- ======= Enhanced Game-Style Hero Section ======= -->
-  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/RAWWAR_MAINMENU.jpg')" data-aos="fade-in">
+  <section class="hero hero-single route bg-image game-hero-details" style="background-image: url('assets/img/RAWWAR/ProjectRawWar.webp')" data-aos="fade-in">
     <div class="particles-container"></div>
     <div class="overlay-game-design"></div>
     <div class="ui-frame top-left"></div>
@@ -203,7 +203,7 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/RAWWAR_PLAYGROUND3.jpg" alt="Rawwar Gameplay Arena" loading="lazy">
+                        <img src="assets/img/RAWWAR/RAWWAR_PLAYGROUND3.jpg" alt="Rawwar Gameplay Arena" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/RAWWAR_PLAYGROUND.webp" alt="Rawwar Combat System" loading="lazy">
+                        <img src="assets/img/RAWWAR/RAWWAR_PLAYGROUND.webp" alt="Rawwar Combat System" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
@@ -227,7 +227,7 @@
                     </div>
                     <div class="swiper-slide">
                       <div class="image-container">
-                        <img src="assets/img/RAWWAR_MAINMENU.jpg" alt="Rawwar Main Menu" loading="lazy">
+                        <img src="assets/img/RAWWAR/RAWWAR_MAINMENU.jpg" alt="Rawwar Main Menu" loading="lazy">
                         <div class="image-overlay">
                           <div class="image-scanner"></div>
                           <div class="image-caption">
