portfolio pic change

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <!-- Profile Picture with HUD frame -->
         <div class="profile-frame" data-aos="fade-right">
           <div class="hexagon-border"></div>
-          <img src="assets/img/Potfolio_Pic_V1.png" alt="Tasif Hossain Emon" class="profile-image">
+          <img src="assets/img/Potfolio_Pic_V2.jpg" alt="Tasif Hossain Emon" class="profile-image">
           <div class="profile-scanner"></div>
           <div class="character-level">LVL 5</div>
         </div>
