--- a/portfolio-details_PCP.html
+++ b/portfolio-details_PCP.html
@@ -253,13 +253,27 @@
               </div>
               <div class="panel-content">
                 <div class="info-grid">
-                  <div class="info-item"><div class="info-label"><i class="bi bi-tag"></i><span>CATEGORY</span></div><div class="info-value">Tactical FPS</div></div>
-                  <div class="info-item"><div class="info-label"><i class="bi bi-building"></i><span>STUDIO</span></div><div class="info-value">Ghost Interactive</div></div>
-                  <div class="info-item"><div class="info-label"><i class="bi bi-globe2"></i><span>WORLD</span></div><div class="info-value">Semi Open World</div></div>
-                  <div class="info-item"><div class="info-label"><i class="bi bi-person"></i><span>ROLE</span></div><div class="info-value">Lead Developer</div></div>
+                  <div class="info-item">
+                    <div class="info-label"><i class="bi bi-tag"></i><span>CATEGORY</span></div>
+                    <div class="info-value">Tactical FPS</div>
+                  </div>
+                  <div class="info-item">
+                    <div class="info-label"><i class="bi bi-building"></i><span>STUDIO</span></div>
+                    <div class="info-value">Ghost Interactive</div>
+                  </div>
+                  <div class="info-item">
+                    <div class="info-label"><i class="bi bi-globe2"></i><span>WORLD</span></div>
+                    <div class="info-value">Semi Open World</div>
+                  </div>
+                  <div class="info-item">
+                    <div class="info-label"><i class="bi bi-person"></i><span>ROLE</span></div>
+                    <div class="info-value">Lead Developer</div>
+                  </div>
                 </div>
                 <div class="action-buttons">
-                  <button class="btn game-button primary" onclick="shareProject()"><i class="bi bi-share"></i><span>SHARE PROJECT</span></button>
+                  <button class="btn game-button primary" onclick="shareProject()">
+                    <i class="bi bi-share"></i><span>SHARE PROJECT</span>
+                  </button>
                 </div>
               </div>
             </div>
