Sorted and working JS

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
+  <!-- Loading Screen CSS -->
+  <link href="assets/css/components/loading.css" rel="stylesheet">
 
 </head>
 
@@ -100,7 +103,7 @@
 </header><!-- End Enhanced Game-Style Header -->
 
   <!-- ======= Enhanced Hero Section with Game Design Elements ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/THE-bg-min.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/CoverBG3.png)">
     <!-- Animated particle overlay -->
     <div class="particles-container"></div>
     
@@ -1583,7 +1586,7 @@
                   </div>
                 </a>
                 
-                <a href="https://www.linkedin.com/in/tasif-hossain-70b372202/" target="_blank" class="social-link linkedin" aria-label="LinkedIn">
+                <a href="https://www.linkedin.com/in/tasif-hossain-emon-70b372202/" target="_blank" class="social-link linkedin" aria-label="LinkedIn">
                   <div class="social-icon">
                     <i class="bi bi-linkedin"></i>
                   </div>
@@ -1728,6 +1731,10 @@
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center game-back-to-top">
   <i class="bi bi-arrow-up-short"></i>
 </a>
+
+  <!-- Loading Screen JS (load first) -->
+  <script src="assets/js/loading.js"></script>
+  
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
