Working Modular CSS

--- a/index-modular.html
+++ b/index-modular.html
@@ -5,24 +5,10 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>THE - Professional Game Developer Portfolio</title>
-  <meta name="description" content="Professional game developer specializing in Unity, web development, and interactive experiences. Explore my portfolio of games, web applications, and creative projects.">
-  <meta name="keywords" content="game developer, unity, web development, portfolio, interactive design, THE">
-  <meta name="author" content="THE">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://tasifhe.github.io/">
-  <meta property="og:title" content="THE - Professional Game Developer Portfolio">
-  <meta property="og:description" content="Professional game developer specializing in Unity, web development, and interactive experiences.">
-  <meta property="og:image" content="assets/img/Potfolio_Pic_V2.jpg">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://tasifhe.github.io/">
-  <meta property="twitter:title" content="THE - Professional Game Developer Portfolio">
-  <meta property="twitter:description" content="Professional game developer specializing in Unity, web development, and interactive experiences.">
-  <meta property="twitter:image" content="assets/img/Potfolio_Pic_V2.jpg">
+  <title>THE - Modular CSS Architecture</title>
+  <meta name="description" content="Game Designer Portfolio with Modular CSS Architecture - Clean, maintainable, and scalable styling">
+  <meta name="keywords" content="game designer, unity developer, modular css, portfolio, css architecture">
+  <meta name="author" content="THE"
 
   <!-- Favicons -->
   <link href="assets/img/THE2.ico" rel="icon">
@@ -74,8 +60,8 @@
     }
   </style>
 
-  <!-- Modern CSS Architecture -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <!-- Main Modular CSS File - New Architecture -->
+  <link href="assets/css/main-modular.css" rel="stylesheet">
 
   <!-- Loading Screen Component -->
   <link href="assets/css/components/loading.css" rel="stylesheet">
