--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <!-- NEW: Modular CSS Architecture -->
+  <link href="assets/css/main-modular.css" rel="stylesheet">
   
-  <!-- Loading Screen CSS -->
-  <link href="assets/css/components/loading.css" rel="stylesheet">
+  <!-- Note: loading.css is now imported within main-modular.css -->
 
 </head>
 
