Added CV download button

--- a/index.html
+++ b/index.html
@@ -135,11 +135,15 @@
             <span class="cursor-indicator">_</span>
           </p>
           
-          <!-- Game-styled CTA button -->
+          <!-- Game-styled CTA buttons -->
           <div class="cta-container">
-            <a href="#about" class="game-button">
+            <a href="#about" class="game-button primary">
               <span class="button-text">START QUEST</span>
               <span class="button-icon">→</span>
+            </a>
+            <a href="assets/CV/CV.pdf" class="game-button secondary" download="Tasif_Hossain_Emon_CV.pdf" target="_blank">
+              <span class="button-text">DOWNLOAD CV</span>
+              <span class="button-icon">⬇</span>
             </a>
           </div>
         </div>
