--- a/portfolio-details_PCP.html
+++ b/portfolio-details_PCP.html
@@ -15,10 +15,21 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
+  
+  <!-- NEW: Modular CSS Architecture -->
+  <link href="assets/css/main-modular.css" rel="stylesheet">
   <link href="assets/css/portfolio-page.css" rel="stylesheet">
 </head>
-<body>
+<body class="portfolio-page">
+
+  <!-- Loading Screen -->
+  <div id="preloader">
+    <div class="preloader-content">
+      <div class="spinner game-spinner"></div>
+      <p>Loading Mission Data...</p>
+    </div>
+  </div>
+
   <!-- ======= Main Site Navbar (from index.html) ======= -->
   <header id="header" class="fixed-top game-header">
     <div class="nav-frame left"></div>
@@ -364,12 +375,6 @@
       </div>
     </div>
   </footer>
-  <div id="preloader">
-    <div class="preloader-content">
-      <div class="spinner game-spinner"></div>
-      <p>Loading Mission Data...</p>
-    </div>
-  </div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center game-back-to-top"><i class="bi bi-arrow-up-short"></i></a>
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -378,6 +383,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/loading.js"></script>
   <script>
     AOS.init({ duration: 1000, easing: 'ease-in-out', once: true, mirror: false });
     document.getElementById('footer-year').textContent = new Date().getFullYear();
