added experience section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           </a>
         </li>
         <li>
+          <a class="nav-link scrollto" href="index.html#experience">
+            <span class="nav-icon"><i class="bi bi-clock-history"></i></span>
+            <span class="nav-text">EXPERIENCE</span>
+            <span class="nav-hover-effect"></span>
+          </a>
+        </li>
+        <li>
           <a class="nav-link scrollto" href="index.html#services">
             <span class="nav-icon"><i class="bi bi-gear"></i></span>
             <span class="nav-text">SERVICES</span>
@@ -451,6 +458,104 @@
     </div>
   </div>
 </section><!-- End Game-Style About Section -->
+
+    <!-- ======= Game-Style Experience Section ======= -->
+    <section id="experience" class="experience-game section-bg">
+      <div class="container">
+        <!-- Game UI decorative elements -->
+        <div class="game-ui-corner top-left"></div>
+        <div class="game-ui-corner top-right"></div>
+        <div class="game-ui-corner bottom-left"></div>
+        <div class="game-ui-corner bottom-right"></div>
+        
+        <!-- Section title with game styling -->
+        <div class="section-title-game">
+          <div class="title-decoration left"></div>
+          <h2 data-text="EXPERIENCE">EXPERIENCE</h2>
+          <div class="title-decoration right"></div>
+        </div>
+
+        <!-- Experience Timeline -->
+        <div class="experience-timeline">
+          
+          <!-- Co-founder & Lead Level Designer at GRANDFLEET -->
+          <div class="experience-item current" data-aos="fade-up">
+            <div class="experience-card">
+              <div class="experience-type-icon">
+                <i class="bi bi-rocket"></i>
+              </div>
+              <div class="experience-card-header">
+                <h3 class="experience-title">Co-founder & Lead Level Designer</h3>
+                <div class="experience-company">GRANDFLEET</div>
+                <div class="experience-period">January 2020 - Present</div>
+              </div>
+            </div>
+            <div class="experience-node"></div>
+          </div>
+
+          <!-- Lead Game Designer at Ghost Interactive -->
+          <div class="experience-item" data-aos="fade-up" data-aos-delay="100">
+            <div class="experience-card">
+              <div class="experience-type-icon">
+                <i class="bi bi-controller"></i>
+              </div>
+              <div class="experience-card-header">
+                <h3 class="experience-title">Lead Game Designer</h3>
+                <div class="experience-company">Ghost Interactive</div>
+                <div class="experience-period">July 2024 - Present</div>
+              </div>
+            </div>
+            <div class="experience-node"></div>
+          </div>
+
+          <!-- Game Designer at RiseUp Labs -->
+          <div class="experience-item" data-aos="fade-up" data-aos-delay="200">
+            <div class="experience-card">
+              <div class="experience-type-icon">
+                <i class="bi bi-lightbulb"></i>
+              </div>
+              <div class="experience-card-header">
+                <h3 class="experience-title">Game Designer</h3>
+                <div class="experience-company">RiseUp Labs</div>
+                <div class="experience-period">September 2023 - June 2024</div>
+              </div>
+            </div>
+            <div class="experience-node"></div>
+          </div>
+
+          <!-- Lead Level Designer at QP Studios -->
+          <div class="experience-item" data-aos="fade-up" data-aos-delay="300">
+            <div class="experience-card">
+              <div class="experience-type-icon">
+                <i class="bi bi-map"></i>
+              </div>
+              <div class="experience-card-header">
+                <h3 class="experience-title">Lead Level Designer</h3>
+                <div class="experience-company">QP Studios</div>
+                <div class="experience-period">March 2023 - February 2024</div>
+              </div>
+            </div>
+            <div class="experience-node"></div>
+          </div>
+
+          <!-- Senior Developer & Level Designer at Utopia -->
+          <div class="experience-item" data-aos="fade-up" data-aos-delay="400">
+            <div class="experience-card">
+              <div class="experience-type-icon">
+                <i class="bi bi-code-slash"></i>
+              </div>
+              <div class="experience-card-header">
+                <h3 class="experience-title">Senior Developer & Level Designer</h3>
+                <div class="experience-company">Utopia (France)</div>
+                <div class="experience-period">September 2021 - March 2022</div>
+              </div>
+            </div>
+            <div class="experience-node"></div>
+          </div>
+
+        </div>
+      </div>
+    </section><!-- End Game-Style Experience Section -->
 
     <!-- ======= Enhanced Game-Style Services Section ======= -->
     <section id="services" class="services-mf pt-5 route">
