--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
     </section><!-- End Enhanced Game-Style Services Section -->
 
 <!-- ======= Enhanced Game-Style Counter Section ======= -->
-    <section id="counter" class="counter-mf sect-pt4 route game-counter-section">
+    <section id="counter" class="counter-mf sect-pt2 route game-counter-section">
       <div class="container">
         <!-- Game UI decorative elements -->
         <div class="game-ui-corner top-left"></div>
@@ -680,7 +680,7 @@
         <div class="game-ui-corner bottom-right"></div>
         
         <!-- Enhanced title section -->
-        <div class="counter-title-section" data-aos="fade-up">
+        <div class="counter-title-section" data-aos="fade-up" style="margin-top: -30px; margin-bottom: 30px;">
           <div class="section-title-game">
             <div class="title-decoration left"></div>
             <h2>MISSION STATS</h2>
